--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.23.26",
     "next": "^15.5.9",
